# authlete-mcp

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  CLAUDE.md  Dockerfile  README.md  authlete_api_search_server.py  authlete_mcp_server.py  docker-compose.yml  main.py  pyproject.toml  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  test.yml  update-idp-openapi-spec.yml  update-openapi-spec.yml
docs/: API.md  ARCHITECTURE.md
examples/: create_service_example.py
resources/: api_filter_config.json  idp-openapi-spec.json  idp-openapi-spec.yaml  openapi-spec.json  postman_collection.json
scripts/: cleanup_test_services.py  create_search_database.py  create_test_services.py  update_idp_openapi_spec.py  update_openapi_spec.py
src/authlete_mcp/: __init__.py  config.py  logging.py  search.py  server.py
src/authlete_mcp/api/: __init__.py  client.py
src/authlete_mcp/models/: __init__.py  base.py  client.py  service.py
src/authlete_mcp/tools/: __init__.py  client_tools.py  jose_tools.py  search_tools.py  service_tools.py  token_tools.py  utility_tools.py
tests/: __init__.py  conftest.py  test_api_search_mcp_connection.py  test_api_search_server.py  test_client_operations.py  test_description_filtering.py  test_error_handling.py  test_extended_client_operations.py  test_jose_operations.py  test_jwks_generation.py  test_logging.py  test_operation_id_search.py  test_patch_operations.py  test_search_tools.py  test_service_deletion.py  test_service_operations.py  test_simple_connection.py  test_token_operations.py
